#238 - Fixed download cart css so it fits back in the title bar - Fixed whitespace problem when finding links with protocols - Re-added Ext cookie state mechanism so download cart works - Moved String -> URL conversion to catch malformed urls and other exceptions

--- a/Portal2/web-app/css/general.css
+++ b/Portal2/web-app/css/general.css
@@ -160,7 +160,7 @@ body {
     padding: 4px 10px 6px;
     position: absolute;
     right: 6px;
-    top: 70px;
+    top: 45px;
 }
 #downloadCart div {
     padding-top: 3px;
